# HealthBytes-dev_Legacy

./: .coverage  .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Diagrama sin título.drawio  Diagramas-Frameworks.drawio  FULLTEXT_SEARCH_SUMMARY.md  HealthBytes.code-workspace  Insfrastuctura_Cloud.drawio  LICENSE  PR_MESSAGE.md  README.md  ROADMAP.md  SETUP_BUSQUEDA.md  UIUX_AUDIT_PROMPT.md  capture-auth.mjs  capture.mjs  debug_imports.py  docker-compose.yml  final_ci_error.txt  nul  opencode.json  package-lock.json  package.json  plan.md  pr_diff.txt  skills-lock.json  test_plan.txt
backend/: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  AI-README.md  Dockerfile  README.md  SECURITY.md  alembic.ini  check_bug.py  check_bug2.sh  ci_error.txt  create_cart_table.py  new_ci_error.txt  pyproject.toml  pytest.ini  recreate_db.py  requirements-dev.txt  requirements.txt  run_migration.py  run_server.py  seed_products.py  setup-hooks.ps1  start.ps1  start.sh  test_results.txt
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  20260219_fc4855b2acbc_add_address_id_and_payment_method_to_.py  20260224_a1b2c3d4e5f6_add_dietary_preferences_to_users.py  20260302_35d20be20a0a_fix_address_user_id_integer_fk.py  20260302_62057b94a38d_add_index_to_dietary_tag_id.py  20260304_a3f1e2d4b5c6_add_vendor_name_to_products.py  20260317_c4800640e2d3_add_expo_push_token_to_users_and_create_.py  (+5 more)
backend/app/: config.py  main.py
backend/migrations/: FULLTEXT_SEARCH_README.md  add_fulltext_search.sql  add_product_filters.sql
backend/scripts/: add_stock_column.py  check_jwks.py  check_p2_deprecations.py  seed_discounts.py  seed_nutrition.py  seed_vendors.py  smoke_tests.py
backend/tests/: README.md  __init__.py  conftest.py  test_config_security.py  test_logging.py
(+838 files in other folders)
